Our sponsors & footer section added, All cards center aligned, code bug fixed!

--- a/styles/styles.css
+++ b/styles/styles.css
@@ -14,10 +14,11 @@
 }
 
 /* Shared styles */
-.display-flex{
+.display-flex {
   display: flex;
 }
-.btn-primary{
+
+.btn-primary {
   color: white;
   font-weight: 600;
   font-size: 1.25rem;
@@ -26,54 +27,65 @@
   border-radius: 8px;
   background-color: #FF900E;
 }
-.btn-primary:hover{
+
+.btn-primary:hover {
   box-shadow: 1px 2px 10px 1px #424242;
 }
 
-main{
+main {
   max-width: 1440px;
   margin: 0 auto;
 }
 
 /* Primary Color */
-.bg-primary{
+.bg-primary {
   background-color: rgba(255, 144, 14, 0.1);
 }
+
 /* Dark 01 */
-.dark-black{
+.dark-black {
   color: #131313;
 }
+
 /* Dark 02 */
-.dark-gray{
+.dark-gray {
   color: #424242;
 }
+
 /* Dark 03 */
-.light-gray{
+.light-gray {
   color: #727272;
 }
+
 /* Orange Color */
-.orang-clr{
+.orang-clr {
   color: #FF900E;
 }
+
 /* Navbar styles */
-.navbar{
+.navbar {
   justify-content: space-between;
   align-items: center;
 }
-.brand, .facts-title{
+
+.brand,
+.facts-title {
   font-weight: 700;
   font-size: 2.8rem;
 }
-.navbar, .banner{
+
+.navbar,
+.banner {
   max-width: 1440px;
   margin: 0 auto;
 }
-.nav-item{
+
+.nav-item {
   list-style: none;
   margin-right: 30px;
 }
 
-.nav-link{
+.nav-link {
   text-decoration: none;
   font-size: 18px;
   font-weight: 500;
@@ -81,52 +93,58 @@ main{
 
 
 /* Banner related styles */
-.banner-content{
+.banner-content {
   max-width: 860px;
   margin: 0 auto;
   text-align: center;
   margin-bottom: 50px;
 }
-.banner-title{
+
+.banner-title {
   font-weight: 700;
   font-size: 4rem;
   margin-bottom: 28px;
 }
 
-.banner-image{
+.banner-image {
   width: 100%;
   padding-bottom: 45px;
 }
 
-.banner-description{
+.banner-description {
   margin-bottom: 32px;
 }
 
 /* Our teams related styles */
-.teams{
+.teams {
   align-items: center;
   margin-top: 80px;
 }
-.team-img-container{
+
+.team-img-container {
   display: grid;
   grid-template-columns: repeat(2, 1fr);
   gap: 20px;
 }
 
-.teams-text-container{
+.teams-text-container {
   max-width: 537px;
   margin: 0 auto;
-  
+
 }
-.text-1{
+
+.text-1 {
   font-size: 2.8rem;
   font-weight: 500;
 }
-.text-2, .text-3{
+
+.text-2,
+.text-3 {
   font-size: 2.8rem;
   font-weight: 700;
 }
-.teams-description{
+
+.teams-description {
   font-size: 1rem;
   line-height: 26px;
   padding-bottom: 16px;
@@ -135,17 +153,25 @@ main{
 /* Our Features Section */
 
 /* Our Facts Section */
-.facts-title{
+.facts-title {
   margin-bottom: 24px;
 }
 
-.facts-container{
+.our-facts {
+  /* border: 1px solid red; */
+  max-width: 1440px;
+  margin: 0 auto;
+}
+
+.facts-container {
+  /* border: 1px solid blue; */
   display: grid;
   grid-template-columns: repeat(4, 1fr);
   margin-top: 80px;
+  justify-items: center;
 }
 
-.fact-card{
+.fact-card {
   border: 1.5px solid #FF900E;
   width: 240px;
   height: 240px;
@@ -154,16 +180,19 @@ main{
   align-items: center;
   text-align: center;
 }
-.fact-icon{
+
+.fact-icon {
   margin-top: 45px;
 }
-.fact-number{
+
+.fact-number {
   font-size: 2.8rem;
   font-weight: 600;
   margin-top: 10px;
   margin-bottom: 5px;
 }
-.fact-title{
+
+.fact-title {
   color: #727272;
   font-weight: 600;
   font-size: 1.25rem;
@@ -171,56 +200,115 @@ main{
   margin-bottom: 60px;
 }
 
+/* Our Sponsors Section */
+.our-sponsors{
+  /* border: 1px solid red; */
+}
+.sponsors-info {
+  max-width: 540px;
+  margin: 0 auto;
+  text-align: center;
+  margin-bottom: 50px;
+}
 
+.sponsors-title {
+  margin-bottom: 24px;
+}
 
+.sponsors-company {
+  /* border: 1px solid blue; */
+  display: grid;
+  grid-template-columns: repeat(5, 1fr);
+  justify-items: center;
+}
+
+.sponsors-company img{
+  filter: grayscale(100%);
+}
+
+/* Footer Section */
+footer{
+  margin: 100px 200px;
+  background-color: #FFF4E7;
+}
+.footer-text{
+  text-align: center;
+  padding: 15px 15px;
+}
 
 /* Mobile Responsive Media */
 @media screen and (max-width: 576px) {
+
   /* Navbar Section */
-  .navbar, .nav-links{
+  .navbar,
+  .nav-links {
     flex-direction: column;
   }
+
   /* Teams Section */
-  .teams{
+  .teams {
     flex-direction: column;
   }
-  .team-img-container{
+
+  .team-img-container {
     grid-template-columns: repeat(1, 1fr);
   }
-  .teams-text-container{
+
+  .teams-text-container {
     text-align: center;
     margin-top: 30px;
   }
+
   /* Facts Section */
-  .our-facts{
+  .our-facts {
     text-align: center;
   }
-  .facts-container{
+
+  .facts-container {
     grid-template-columns: repeat(1, 1fr);
     justify-items: center;
     row-gap: 30px;
+  }
+
+  /* Our Sponsors */
+  .sponsors-company{
+    grid-template-columns: repeat(1, 1fr);
+    row-gap: 20px;
+  }
+  /* Footer */
+  footer{
+    margin: 50px 0;
   }
 }
 
 /* Tablet Responsive Media */
 @media screen and (min-width: 576px) and (max-width: 992px) {
-  .teams{
+  .teams {
     flex-direction: column;
     text-align: center;
   }
-  .teams-text-container{
+
+  .teams-text-container {
     margin-top: 30px;
   }
-  .our-facts{
+
+  .our-facts {
     text-align: center;
   }
-  .facts-container{
+
+  .facts-container {
     grid-template-columns: repeat(2, 1fr);
     row-gap: 20px;
     justify-items: center;
   }
-  .facts-description{
+
+  .facts-description {
     text-align: center;
   }
+  /* Our Sponsors */
+  .sponsors-company{
+    grid-template-columns: repeat(2, 1fr);
+    row-gap: 20px;
+  }
+  
 }
-
